# mycelium

./: .env.example  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  AF006_WORK_SUMMARY.md  AGENTS.md  CHANGELOG.md  COMPLETION-STATUS.md  DOGFOODING-RESULTS.md  LICENSE  LOG.md  PHASE-4-5-SUMMARY.md  READING_LIST.md  README.md  TESTING-SUMMARY.md  TODO.md  todo.txt
.githooks/: pre-commit
benchmarks/: README.md
docs/: AF-006-DESIGN.md  README.md  af006-integration.md  index.html  llms.txt  robots.txt  sitemap.xml
examples/: README.md  (+11 more)
sdk/: .gitignore  AF006_PROOF.md  CHANGELOG.md  INTEGRATION_CHECKLIST.md  PROOF_INDEX.md  PROOF_SUMMARY.md  README.md  pyproject.toml
sdk/examples/: README.md  mycelium.template.yaml  mycelium.yaml
sdk/mycelium/: README.md  __init__.py  __main__.py  _compat.py  action_ledger.py  audit_receipt.py  cache.py  config.py  content_block_normalizer.py  history_guard.py  http.py  message_validator.py  protect.py  quickstart.py  reconcile.py  schema.py  scratchpad_guard.py  session.py  state_flush.py  stream_guard.py  task_ledger.py  tool_boundary.py  tool_registry.py  tool_runner.py  tool_sequencer.py  transition.py  transition_resolution.py
sdk/mycelium/adapters/: __init__.py  autogen.py  cline.py  crewai.py  langchain.py  langgraph.py  livekit.py  openai_agents.py  openhands.py  smolagents.py  stagehand.py
sdk/mycelium/auto_instrumentation/: __init__.py  bootstrap.py
sdk/mycelium/auto_instrumentation/site_bootstrap/: __init__.py  sitecustomize.py
sdk/mycelium/core/: __init__.py  policy.py  registry.py  runtime.py  runtime_context_corruption.py  types.py
sdk/mycelium/fixtures/: __init__.py  langgraph-7417-duplicate-tool-execution.json
sdk/mycelium/integrations/: __init__.py  langgraph.py
sdk/mycelium/proofs/: __init__.py  langgraph_7417.py  langgraph_7417_redis.py
sdk/mycelium/protections/: __init__.py  context_corruption.py  decorators.py  loop_detection.py  observability.py  tool_misuse.py
sdk/mycelium/storage/: __init__.py  _helpers.py  file_lock.py  json_file.py  postgres_ledger.py  redis_ledger.py
sdk/mycelium/telemetry/: __init__.py  tracer.py
sdk/mycelium/templates/: mycelium.minimal.yaml  mycelium.quickstart.yaml  mycelium.template.yaml
sdk/tests/: conftest.py  test_af006_adversarial.py  test_af006_real_reproducers.py  test_audit_receipt.py  test_auto_instrumentation.py  test_cache_cap.py  test_cli.py  test_cli_run.py  test_config.py  test_conformance_tsc007.py  test_context_corruption.py  test_deterministic.py  test_duplicate_turns.py  test_entity_pattern.py  test_external_operation_ref.py  test_history_guard.py  test_langgraph_integration.py  test_lease_validity.py  test_message_validator.py  test_negative_caching.py  test_orphaned_results.py  test_payload_completeness.py  test_proof_two_worker_redis.py  test_proofs_langgraph_7417.py  test_protect.py  test_protect_failure_modes.py  test_protect_sync.py  test_provider_detection.py  test_provider_idempotency_key.py  test_read_only_resolution.py  test_reconcile.py  test_repair_gate.py  test_runtime_context_corruption.py  test_scratchpad.py  test_session.py  test_side_effect_boundary.py  test_side_effect_resolution.py  test_state_flush.py  test_storage_backends.py  test_stream_ordering.py  (+10 more)
(+68 files in other folders)
