[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycelium-runtime"
version = "1.10.0"
description = "Runtime guards for AI agents: stale context, bad tool calls, duplicate side effects on retry"
keywords = [
  "ai-agents",
  "agent-reliability",
  "langgraph",
  "crewai",
  "idempotency",
  "tool-calling",
  "duplicate-tool-execution",
  "agent-guardrails",
  "llm-agents",
  "python",
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/mycelium-labs/mycelium"
Repository = "https://github.com/mycelium-labs/mycelium"
Issues = "https://github.com/mycelium-labs/mycelium/issues"

[project.optional-dependencies]
redis = ["redis>=5"]
postgres = ["psycopg[binary]>=3"]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "fakeredis",
]

[project.scripts]
mycelium = "mycelium.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mycelium"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
